Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-10940

Imperative Code is not supported in Qt Quick Designer M203

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • Qt Creator 3.0.0-beta, Qt Creator 3.0.0-rc1, Qt Creator 3.0.0
    • Quick Designer
    • None

      QTCOMPONENTS-1310 is almost the same as this and all those complains about useless designer are still valid. Im using QtC from git as today.

      Even when disabling warnings the Designer cannot be used anymore until removal of imperative code.

        For Gerrit Dashboard: QTCREATORBUG-10940
        # Subject Branch Project Status CR V

            fawzi Fawzi Mohamed
            desert Ariel Molina R.
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes