qmljs: correctly set Warnings

WarnImperativeCodeNotEditableInVisualDesigner and
WarnReferenceToParentItemNotSupportedByVisualDesigner were still
declared as errors, which made files having them no editable in
designer.

Task-number: QTCREATORBUG-10940
Change-Id: I6edc03634c2d05b74ab0adf62e48fc6d03049d7e
Reviewed-by: Thomas Hartmann <Thomas.Hartmann@digia.com>